# cinecheckb

./: .env  Dockerfile  MONGODB_ATLAS_FIX.md  README.md  RENDER_DEPLOYMENT.md  api.py  docker-compose.yml  minimal_test.py  pyproject.toml  railway.json  render.yaml  requirements.txt  vercel.json
src/: app.py
src/api/: index.py  routes.py
src/api/v1/: admin_routes.py  auth_routes.py  movie_routes.py  review_routes.py  user_routes.py  watchlist_routes.py
src/core/: config.py  db.py  security.py
src/models/: movie.py  review.py  user.py
src/schemas/: __init__.py  movie.py  review.py  user.py
src/services/: user_service.py
src/utils/: helpers.py
tests/: test_app.py
vercel_api/: api.py
